# CompGrid

./: .gitignore  README.md  docker-compose.yml
.github/: workflows.yaml
.github/workflows/: main.yml
Control/: Dockerfile  cluster.py  package-lock.json  pyproject.toml
Control/clustercontroll/: manage.py
Control/clustercontroll/clustercontroll/: asgi.py  settings.py  urls.py  wsgi.py
Control/clustercontroll/control/: urls.py  views.py
Infra/: db.tf  ddl.sql
backend/: Dockerfile  app.js  authMiddleware.js  db.js  package-lock.json  package.json
backend/config/: jwt.js
backend/routes/: ownerRoutes.js  userRoutes.js
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  config.js  config.json
client/src/components/: CostChart.js  CumulativeCostChart.js  IncomeLineChart.js  InstanceTypePieChart.js  LazyTable.js  NavBar.js  SongCard.js  StatsCards.js  TopUsersTable.js  UptimeLineChart.js
client/src/context/: AuthContext.js
client/src/pages/: AlbumInfoPage.js  AlbumsPage.js  AnalyticsPage.js  HomePage.js  LoginPage.js  OwnerHomePage.js  OwnerLoginPage.js  OwnerManagePage.js  OwnerRegisterPage.js  RegisterPage.js  SongsPage.js  UserHomePage.js  UserLoginPage.js  UserManagePage.js  UserRegisterPage.js
eks/: cluster.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.js  routes.js
frontend/src/services/: api.js
k8s/: app-config.yaml  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  redis-deployment.yaml  secrets.yaml
(+10 files in other folders)
